# ChangeLog for Gentoo Linux System Intialization ("rc") scripts 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

  04 Dec 2002; Martin Schlemmer <azarah@gentoo.org>:

    Setup colums, etc up properly for serial consoles in /sbin/functions.sh.
    Closes bug #11557, thanks to Erik Scrafford <erik@scrafford.org>.

    Add headers similar to that of portage-2.0.45 and up to the
    generated profile files (/etc/{profile,csh}.env).  Updated
    src/awk/genenviron.awk for this.

  01 Dec 2002; Martin Schlemmer <azarah@gentoo.org>:

    Fix typeo in /etc/devfsd.conf, closing bug #11424, thanks to the
    sharp eye of Techie2000 <Linux@mochamail.com>.

    Rename /sbin/update-modules to /sbin/modules-update, closing
    bug #11445.

    Nano moved from /usr/bin/nano to /bin/nano.  Fix this in
    /etc/env.d/00basic, bug #10916.

  27 Nov 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add more improvements to clustering code.  This is from
    Olivier Crete <crete@cerca.umontreal.ca>, bug #4151.

  26 Nov 2002; Martin Schlemmer <azarah@gentoo.org>:

    Change default 'net' dependency behaviour to be more suited
    for notebook users.  Basically if at least one net.* service
    beside net.lo start successfully, the 'net' dependency is
    considered up.  Server admin can set RC_NET_STRICT_CHECKING="yes"
    in /etc/conf.d/rc to change this back to the old default.
    This is the start to address bug #2706.

* rc-scripts 1.4.2.4 (26 Nov 2002)

  26 Nov 2002; Martin Schlemmer <azarah@gentoo.org>:

    Initial merge of bits for Adelie Linux for SSI clusters.  More
    info at:

      http://www.cerca.umontreal.ca/hpc/en/projects/adelie/index.html

  25 Nov 2002; Martin Schlemmer <azarah@gentoo.org>:

    One liner fix to src/awk/cachedepends.awk to once again fix
    bug #7803.

  18 Nov 2002; Martin Schlemmer <azarah@gentoo.org>:
