@@ -41,6 +41,7 @@ nofiles:x:200:
 qmail:x:201:
 postfix:x:207:
 postdrop:x:208:
+smmsp:x:209:smmsp
 portage::250:portage
 utmp:x:406:
 nogroup::65533:
