@@ -35,6 +35,7 @@ qmailq:x:204:201::/var/qmail:/bin/false
 qmailr:x:205:201::/var/qmail:/bin/false
 qmails:x:206:201::/var/qmail:/bin/false
 postfix:x:207:207:postfix:/var/spool/postfix:/bin/false
+smmsp:x:209:209:smmsp:/var/spool/mqueue:/bin/false
 portage:x:250:250:portage:/var/tmp/portage:/bin/false
 guest:x:405:100:guest:/dev/null:/dev/null
 nobody:x:65534:65534:nobody:/:/bin/false
